Sgp4Prop_v9.4/Sgp4Prop/SampleCode/Go/DriverExamples/wrappers/AstroFuncDll.h

// Computes various Sun and Moon vectors base on loaded JPL data at the specified time.
// Note: if JPL data isn't loaded or available, all output parameters are set to zero
void JplCompSunMoonVec(double ds50UTC, double uvecSun[3], double* sunVecMag, double uvecMoon[3], double* moonVecMag);
// Computes Sun and Moon position vectors base on loaded JPL data at the specified time.
// Note: if JPL data isn't loaded or available, all output parameters are set to zero
void JplCompSunMoonPos(double ds50UTC, double sunVec[3], double moonVec[3]);
// Removes the JPL ephemeris from memory
void RemoveJpl();
// Rotates position and velocity vectors from TEME of Epoch to TEME of Date
void TemeEpochToDate(int nutationTerms, double epochDs50TAI, double dateDs50TAI, double posEpoch[3], double velEpoch[3], double posDate[3], double velDate[3]);