Sgp4Prop_v9.4/Sgp4Prop/SampleCode/Ada/DriverExamples/wrappers/astrofuncdll.ads


    -- Computes various Sun and Moon vectors base on loaded JPL data at the specified time.
    -- Note: if JPL data isn't loaded or available, all output parameters are set to zero
    procedure JplCompSunMoonVec
        (ds50UTC           :         Long_Float;
        uvecSun            : out     Double1D;
        sunVecMag          : out     Long_Float;
        uvecMoon           : out     Double1D;
        moonVecMag         : out     Long_Float)
    with Import => True,
        Convention => C,
        External_Name => "JplCompSunMoonVec";
        --uvecSun            : Double1D  (1..3);
        --uvecMoon           : Double1D  (1..3);

    -- Computes Sun and Moon position vectors base on loaded JPL data at the specified time.
    -- Note: if JPL data isn't loaded or available, all output parameters are set to zero
    procedure JplCompSunMoonPos
        (ds50UTC           :         Long_Float;
        sunVec             : out     Double1D;
        moonVec            : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "JplCompSunMoonPos";
        --sunVec             : Double1D  (1..3);
        --moonVec            : Double1D  (1..3);

    -- Removes the JPL ephemeris from memory
    procedure RemoveJpl
    with Import => True,
        Convention => C,
        External_Name => "RemoveJpl";

    -- Rotates position and velocity vectors from TEME of Epoch to TEME of Date
    procedure TemeEpochToDate
        (nutationTerms     :         Integer;
        epochDs50TAI       :         Long_Float;
        dateDs50TAI        :         Long_Float;
        posEpoch           : in      Double1D;
        velEpoch           : in      Double1D;
        posDate            : out     Double1D;
        velDate            : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "TemeEpochToDate";
        --posEpoch           : Double1D  (1..3);
        --velEpoch           : Double1D  (1..3);
        --posDate            : Double1D  (1..3);
        --velDate            : Double1D  (1..3);


end AstroFuncDll;

-- ========================= End of auto generated code ==========================
